dapr-distributed-calendar/traefik/traefik-dashboard-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.<ENV-NAME>-<ENV-USER-ID>-01.<ENV-ANIMAL>.<ENV-DOMAIN>`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 9000
